--- a/README.textile
+++ b/README.textile
@@ -99,7 +99,7 @@ Next, let's make sure our user gets an e-mail with his activation code when he s
   # added to app/models/notifier.rb
   def activation_instructions(user)
     subject       "Activation Instructions"
-    from          "noreply@binarylogic.com" # Removed name/brackets around 'from' to resolve "555 5.5.2 Syntax error." as of Rails 2.3.3
+    from          "Binary Logic <noreply@binarylogic.com>"
     recipients    user.email
     sent_on       Time.now
     body          :account_activation_url => activate_url(user.perishable_token)
@@ -107,7 +107,7 @@ Next, let's make sure our user gets an e-mail with his activation code when he s
 
   def welcome(user)
     subject       "Welcome to the site!"
-    from          "noreply@binarylogic.com"
+    from          "Binary Logic <noreply@binarylogic.com>"
     recipients    user.email
     sent_on       Time.now
     body          :root_url => root_url
